monitoring/overlays/test/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /prometheus/
        backend:
          serviceName: prometheus
          servicePort: 9090
