monitoring/overlays/test/prometheus/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  template:
    spec:
      containers:
        - name: prometheus
          args:
            - --config.file=/etc/prometheus/config/prometheus.yaml
            - --storage.tsdb.path=/prometheus/
            - --storage.tsdb.retention.time=7d
          resources:
            requests:
              cpu: 150m
              memory: 700M
            limits:
              cpu: 750m
              memory: 2000M
  volumeClaimTemplates:
  - metadata:
      name: data-volume
    spec:
      storageClassName: managed-premium-retain
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
